# name: test_query_all_questions[action_button-question__configuration14-None-question__format_validators14]
  <class 'dict'> {
    'allQuestions': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            '__typename': 'ActionButtonQuestion',
            'id': 'QWN0aW9uQnV0dG9uUXVlc3Rpb246ZW52aXJvbm1lbnRhbC10ZW4=',
            'infoText': '',
            'label': 'Bonnie Moreno',
            'meta': <class 'dict'> {
            },
            'slug': 'environmental-ten',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_questions[calculated_float-question__configuration13-None-question__format_validators13]
  <class 'dict'> {
    'allQuestions': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            '__typename': 'CalculatedFloatQuestion',
            'calcExpression': '-1.0',
            'hintText': '',
            'id': 'Q2FsY3VsYXRlZEZsb2F0UXVlc3Rpb246ZW52aXJvbm1lbnRhbC10ZW4=',
            'infoText': '',
            'label': 'Bonnie Moreno',
            'meta': <class 'dict'> {
            },
            'slug': 'environmental-ten',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_questions[choice-question__configuration6-None-question__format_validators6]
  <class 'dict'> {
    'allQuestions': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            '__typename': 'ChoiceQuestion',
            'hintText': '',
            'id': 'Q2hvaWNlUXVlc3Rpb246ZW52aXJvbm1lbnRhbC10ZW4=',
            'infoText': '',
            'label': 'Bonnie Moreno',
            'meta': <class 'dict'> {
            },
            'options': <class 'dict'> {
              'edges': <class 'list'> [
                <class 'dict'> {
                  'node': <class 'dict'> {
                    'slug': 'measure-evening',
                  },
                },
              ],
              'totalCount': 1,
            },
            'slug': 'environmental-ten',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_questions[date-question__configuration3-None-question__format_validators3]
  <class 'dict'> {
    'allQuestions': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            '__typename': 'DateQuestion',
            'hintText': '',
            'id': 'RGF0ZVF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
            'infoText': '',
            'label': 'Bonnie Moreno',
            'meta': <class 'dict'> {
            },
            'slug': 'environmental-ten',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_questions[dynamic_choice-question__configuration10-MyDataSource-question__format_validators10]
  <class 'dict'> {
    'allQuestions': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            '__typename': 'DynamicChoiceQuestion',
            'hintText': '',
            'id': 'RHluYW1pY0Nob2ljZVF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
            'infoText': '',
            'label': 'Bonnie Moreno',
            'meta': <class 'dict'> {
            },
            'options': <class 'dict'> {
              'edges': <class 'list'> [
                <class 'dict'> {
                  'node': <class 'dict'> {
                    'label': '1',
                    'slug': '1',
                  },
                },
                <class 'dict'> {
                  'node': <class 'dict'> {
                    'label': '5.5',
                    'slug': '5.5',
                  },
                },
                <class 'dict'> {
                  'node': <class 'dict'> {
                    'label': 'sdkj',
                    'slug': 'sdkj',
                  },
                },
                <class 'dict'> {
                  'node': <class 'dict'> {
                    'label': 'info',
                    'slug': 'value',
                  },
                },
                <class 'dict'> {
                  'node': <class 'dict'> {
                    'label': 'something',
                    'slug': 'something',
                  },
                },
                <class 'dict'> {
                  'node': <class 'dict'> {
                    'label': 'english description',
                    'slug': 'translated_value',
                  },
                },
              ],
            },
            'slug': 'environmental-ten',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_questions[dynamic_multiple_choice-question__configuration11-MyDataSource-question__format_validators11]
  <class 'dict'> {
    'allQuestions': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            '__typename': 'DynamicMultipleChoiceQuestion',
            'hintText': '',
            'id': 'RHluYW1pY011bHRpcGxlQ2hvaWNlUXVlc3Rpb246ZW52aXJvbm1lbnRhbC10ZW4=',
            'infoText': '',
            'label': 'Bonnie Moreno',
            'meta': <class 'dict'> {
            },
            'options': <class 'dict'> {
              'edges': <class 'list'> [
                <class 'dict'> {
                  'node': <class 'dict'> {
                    'label': '1',
                    'slug': '1',
                  },
                },
                <class 'dict'> {
                  'node': <class 'dict'> {
                    'label': '5.5',
                    'slug': '5.5',
                  },
                },
                <class 'dict'> {
                  'node': <class 'dict'> {
                    'label': 'sdkj',
                    'slug': 'sdkj',
                  },
                },
                <class 'dict'> {
                  'node': <class 'dict'> {
                    'label': 'info',
                    'slug': 'value',
                  },
                },
                <class 'dict'> {
                  'node': <class 'dict'> {
                    'label': 'something',
                    'slug': 'something',
                  },
                },
                <class 'dict'> {
                  'node': <class 'dict'> {
                    'label': 'english description',
                    'slug': 'translated_value',
                  },
                },
              ],
            },
            'slug': 'environmental-ten',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_questions[file-question__configuration9-None-question__format_validators9]
  <class 'dict'> {
    'allQuestions': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            '__typename': 'FileQuestion',
            'hintText': '',
            'id': 'RmlsZVF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
            'infoText': '',
            'label': 'Bonnie Moreno',
            'meta': <class 'dict'> {
            },
            'slug': 'environmental-ten',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_questions[float-question__configuration1-None-question__format_validators1]
  <class 'dict'> {
    'allQuestions': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            '__typename': 'FloatQuestion',
            'floatMaxValue': 1.0,
            'floatMinValue': 0.0,
            'hintText': '',
            'id': 'RmxvYXRRdWVzdGlvbjplbnZpcm9ubWVudGFsLXRlbg==',
            'infoText': '',
            'label': 'Bonnie Moreno',
            'meta': <class 'dict'> {
            },
            'placeholder': '',
            'slug': 'environmental-ten',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_questions[float-question__configuration2-None-question__format_validators2]
  <class 'dict'> {
    'allQuestions': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            '__typename': 'FloatQuestion',
            'floatMaxValue': None,
            'floatMinValue': None,
            'hintText': '',
            'id': 'RmxvYXRRdWVzdGlvbjplbnZpcm9ubWVudGFsLXRlbg==',
            'infoText': '',
            'label': 'Bonnie Moreno',
            'meta': <class 'dict'> {
            },
            'placeholder': '',
            'slug': 'environmental-ten',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_questions[form-question__configuration8-None-question__format_validators8]
  <class 'dict'> {
    'allQuestions': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            '__typename': 'FormQuestion',
            'id': 'Rm9ybVF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
            'infoText': '',
            'label': 'Bonnie Moreno',
            'meta': <class 'dict'> {
            },
            'slug': 'environmental-ten',
            'subForm': <class 'dict'> {
              'slug': 'eight-traditional',
            },
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_questions[integer-question__configuration0-None-question__format_validators0]
  <class 'dict'> {
    'allQuestions': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            '__typename': 'IntegerQuestion',
            'hintText': '',
            'id': 'SW50ZWdlclF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
            'infoText': '',
            'integerMaxValue': 10,
            'integerMinValue': 0,
            'label': 'Bonnie Moreno',
            'meta': <class 'dict'> {
            },
            'placeholder': '',
            'slug': 'environmental-ten',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_questions[multiple_choice-question__configuration7-None-question__format_validators7]
  <class 'dict'> {
    'allQuestions': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            '__typename': 'MultipleChoiceQuestion',
            'hintText': '',
            'id': 'TXVsdGlwbGVDaG9pY2VRdWVzdGlvbjplbnZpcm9ubWVudGFsLXRlbg==',
            'infoText': '',
            'label': 'Bonnie Moreno',
            'meta': <class 'dict'> {
            },
            'options': <class 'dict'> {
              'edges': <class 'list'> [
                <class 'dict'> {
                  'node': <class 'dict'> {
                    'slug': 'measure-evening',
                  },
                },
              ],
              'totalCount': 1,
            },
            'slug': 'environmental-ten',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_questions[static-question__configuration12-None-question__format_validators12]
  <class 'dict'> {
    'allQuestions': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            '__typename': 'StaticQuestion',
            'id': 'U3RhdGljUXVlc3Rpb246ZW52aXJvbm1lbnRhbC10ZW4=',
            'infoText': '',
            'label': 'Bonnie Moreno',
            'meta': <class 'dict'> {
            },
            'slug': 'environmental-ten',
            'staticContent': '
              Station story first. Team suggest traditional boy above. Argue move appear catch toward help wind.
              Kid avoid player relationship to range whose. Draw free property consider.
            ',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_questions[text-question__configuration4-None-question__format_validators4]
  <class 'dict'> {
    'allQuestions': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            '__typename': 'TextQuestion',
            'formatValidators': <class 'dict'> {
              'edges': <class 'list'> [
                <class 'dict'> {
                  'node': <class 'dict'> {
                    'errorMsg': 'Please enter a valid Email address.',
                    'name': 'E-mail',
                    'regex': '(^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\\.[a-zA-Z0-9-.]+$)',
                    'slug': 'email',
                  },
                },
              ],
            },
            'hintText': '',
            'id': 'VGV4dFF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
            'infoText': '',
            'label': 'Bonnie Moreno',
            'maxLength': None,
            'meta': <class 'dict'> {
            },
            'minLength': 10,
            'placeholder': '',
            'slug': 'environmental-ten',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_query_all_questions[textarea-question__configuration5-None-question__format_validators5]
  <class 'dict'> {
    'allQuestions': <class 'dict'> {
      'edges': <class 'list'> [
        <class 'dict'> {
          'node': <class 'dict'> {
            '__typename': 'TextareaQuestion',
            'formatValidators': <class 'dict'> {
              'edges': <class 'list'> [
              ],
            },
            'hintText': '',
            'id': 'VGV4dGFyZWFRdWVzdGlvbjplbnZpcm9ubWVudGFsLXRlbg==',
            'infoText': '',
            'label': 'Bonnie Moreno',
            'maxLength': 10,
            'meta': <class 'dict'> {
            },
            'minLength': None,
            'placeholder': '',
            'slug': 'environmental-ten',
          },
        },
      ],
      'totalCount': 1,
    },
  }
---
# name: test_save_action_button_question[action_button]
  <class 'dict'> {
    'saveActionButtonQuestion': <class 'dict'> {
      'clientMutationId': 'testid',
      'question': <class 'dict'> {
        '__typename': 'ActionButtonQuestion',
        'action': 'SKIP',
        'color': 'PRIMARY',
        'id': 'QWN0aW9uQnV0dG9uUXVlc3Rpb246ZW52aXJvbm1lbnRhbC10ZW4=',
        'label': 'Bonnie Moreno',
        'meta': <class 'dict'> {
        },
        'slug': 'environmental-ten',
        'validateOnEnter': False,
      },
    },
  }
---
# name: test_save_choice_question[choice-False]
  <class 'dict'> {
    'saveChoiceQuestion': <class 'dict'> {
      'clientMutationId': 'testid',
      'question': <class 'dict'> {
        '__typename': 'ChoiceQuestion',
        'defaultAnswer': None,
        'hintText': '',
        'id': 'Q2hvaWNlUXVlc3Rpb246ZW52aXJvbm1lbnRhbC10ZW4=',
        'label': 'Bonnie Moreno',
        'meta': <class 'dict'> {
        },
        'options': <class 'dict'> {
          'edges': <class 'list'> [
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': 'Susan Wilson',
                'slug': 'eight-traditional',
              },
            },
          ],
        },
        'slug': 'environmental-ten',
      },
    },
  }
---
# name: test_save_choice_question[choice-True]
  <class 'dict'> {
    'saveChoiceQuestion': <class 'dict'> {
      'clientMutationId': 'testid',
      'question': <class 'dict'> {
        '__typename': 'ChoiceQuestion',
        'defaultAnswer': <class 'dict'> {
          'value': 'eight-traditional',
        },
        'hintText': 'test',
        'id': 'Q2hvaWNlUXVlc3Rpb246ZW52aXJvbm1lbnRhbC10ZW4=',
        'label': 'Bonnie Moreno',
        'meta': <class 'dict'> {
        },
        'options': <class 'dict'> {
          'edges': <class 'list'> [
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': 'Susan Wilson',
                'slug': 'eight-traditional',
              },
            },
          ],
        },
        'slug': 'environmental-ten',
      },
    },
  }
---
# name: test_save_dynamic_choice_question[dynamic_choice-False]
  <class 'dict'> {
    'saveDynamicChoiceQuestion': <class 'dict'> {
      'clientMutationId': 'testid',
      'question': <class 'dict'> {
        '__typename': 'DynamicChoiceQuestion',
        'hintText': 'test',
        'id': 'RHluYW1pY0Nob2ljZVF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
        'label': 'Bonnie Moreno',
        'meta': <class 'dict'> {
        },
        'options': <class 'dict'> {
          'edges': <class 'list'> [
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': '1',
                'slug': '1',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': '5.5',
                'slug': '5.5',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': 'sdkj',
                'slug': 'sdkj',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': 'info',
                'slug': 'value',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': 'something',
                'slug': 'something',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': 'english description',
                'slug': 'translated_value',
              },
            },
          ],
        },
        'slug': 'environmental-ten',
      },
    },
  }
---
# name: test_save_dynamic_choice_question[dynamic_choice-True]
  <class 'dict'> {
    'saveDynamicChoiceQuestion': <class 'dict'> {
      'clientMutationId': 'testid',
      'question': <class 'dict'> {
        '__typename': 'DynamicChoiceQuestion',
        'hintText': 'test',
        'id': 'RHluYW1pY0Nob2ljZVF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
        'label': 'Bonnie Moreno',
        'meta': <class 'dict'> {
        },
        'options': <class 'dict'> {
          'edges': <class 'list'> [
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': '1',
                'slug': '1',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': '5.5',
                'slug': '5.5',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': 'sdkj',
                'slug': 'sdkj',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': 'info',
                'slug': 'value',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': 'something',
                'slug': 'something',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': 'english description',
                'slug': 'translated_value',
              },
            },
          ],
        },
        'slug': 'environmental-ten',
      },
    },
  }
---
# name: test_save_dynamic_choice_question[dynamic_multiple_choice-False]
  <class 'dict'> {
    'saveDynamicChoiceQuestion': <class 'dict'> {
      'clientMutationId': 'testid',
      'question': <class 'dict'> {
        '__typename': 'DynamicChoiceQuestion',
        'hintText': 'test',
        'id': 'RHluYW1pY0Nob2ljZVF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
        'label': 'Bonnie Moreno',
        'meta': <class 'dict'> {
        },
        'options': <class 'dict'> {
          'edges': <class 'list'> [
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': '1',
                'slug': '1',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': '5.5',
                'slug': '5.5',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': 'sdkj',
                'slug': 'sdkj',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': 'info',
                'slug': 'value',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': 'something',
                'slug': 'something',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': 'english description',
                'slug': 'translated_value',
              },
            },
          ],
        },
        'slug': 'environmental-ten',
      },
    },
  }
---
# name: test_save_dynamic_choice_question[dynamic_multiple_choice-True]
  <class 'dict'> {
    'saveDynamicChoiceQuestion': <class 'dict'> {
      'clientMutationId': 'testid',
      'question': <class 'dict'> {
        '__typename': 'DynamicChoiceQuestion',
        'hintText': 'test',
        'id': 'RHluYW1pY0Nob2ljZVF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
        'label': 'Bonnie Moreno',
        'meta': <class 'dict'> {
        },
        'options': <class 'dict'> {
          'edges': <class 'list'> [
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': '1',
                'slug': '1',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': '5.5',
                'slug': '5.5',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': 'sdkj',
                'slug': 'sdkj',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': 'info',
                'slug': 'value',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': 'something',
                'slug': 'something',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': 'english description',
                'slug': 'translated_value',
              },
            },
          ],
        },
        'slug': 'environmental-ten',
      },
    },
  }
---
# name: test_save_dynamic_multiple_choice_question[dynamic_multiple_choice-False]
  <class 'dict'> {
    'saveDynamicMultipleChoiceQuestion': <class 'dict'> {
      'clientMutationId': 'testid',
      'question': <class 'dict'> {
        '__typename': 'DynamicMultipleChoiceQuestion',
        'hintText': 'test',
        'id': 'RHluYW1pY011bHRpcGxlQ2hvaWNlUXVlc3Rpb246ZW52aXJvbm1lbnRhbC10ZW4=',
        'label': 'Bonnie Moreno',
        'meta': <class 'dict'> {
        },
        'options': <class 'dict'> {
          'edges': <class 'list'> [
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': '1',
                'slug': '1',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': '5.5',
                'slug': '5.5',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': 'sdkj',
                'slug': 'sdkj',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': 'info',
                'slug': 'value',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': 'something',
                'slug': 'something',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': 'english description',
                'slug': 'translated_value',
              },
            },
          ],
        },
        'slug': 'environmental-ten',
      },
    },
  }
---
# name: test_save_dynamic_multiple_choice_question[dynamic_multiple_choice-True]
  <class 'dict'> {
    'saveDynamicMultipleChoiceQuestion': <class 'dict'> {
      'clientMutationId': 'testid',
      'question': <class 'dict'> {
        '__typename': 'DynamicMultipleChoiceQuestion',
        'hintText': 'test',
        'id': 'RHluYW1pY011bHRpcGxlQ2hvaWNlUXVlc3Rpb246ZW52aXJvbm1lbnRhbC10ZW4=',
        'label': 'Bonnie Moreno',
        'meta': <class 'dict'> {
        },
        'options': <class 'dict'> {
          'edges': <class 'list'> [
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': '1',
                'slug': '1',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': '5.5',
                'slug': '5.5',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': 'sdkj',
                'slug': 'sdkj',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': 'info',
                'slug': 'value',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': 'something',
                'slug': 'something',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': 'english description',
                'slug': 'translated_value',
              },
            },
          ],
        },
        'slug': 'environmental-ten',
      },
    },
  }
---
# name: test_save_float_question[float-question__configuration0-0.3-True]
  <class 'dict'> {
    'saveFloatQuestion': <class 'dict'> {
      'clientMutationId': 'testid',
      'question': <class 'dict'> {
        '__typename': 'FloatQuestion',
        'defaultAnswer': <class 'dict'> {
          'value': 0.3,
        },
        'hintText': 'test',
        'id': 'RmxvYXRRdWVzdGlvbjplbnZpcm9ubWVudGFsLXRlbg==',
        'label': 'Bonnie Moreno',
        'maxValue': 10.0,
        'meta': <class 'dict'> {
        },
        'minValue': 0.0,
        'slug': 'environmental-ten',
      },
    },
  }
---
# name: test_save_form_question[form]
  <class 'dict'> {
    'saveFormQuestion': <class 'dict'> {
      'clientMutationId': 'testid',
      'question': <class 'dict'> {
        '__typename': 'FormQuestion',
        'id': 'Rm9ybVF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
        'label': 'Bonnie Moreno',
        'meta': <class 'dict'> {
        },
        'slug': 'environmental-ten',
        'subForm': <class 'dict'> {
          'slug': 'eight-traditional',
        },
      },
    },
  }
---
# name: test_save_integer_question[integer-question__configuration0-23-True]
  <class 'dict'> {
    'saveIntegerQuestion': <class 'dict'> {
      'clientMutationId': 'testid',
      'question': <class 'dict'> {
        '__typename': 'IntegerQuestion',
        'defaultAnswer': <class 'dict'> {
          'value': 23,
        },
        'hintText': 'test',
        'id': 'SW50ZWdlclF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
        'label': 'Bonnie Moreno',
        'maxValue': 10,
        'meta': <class 'dict'> {
        },
        'minValue': 0,
        'slug': 'environmental-ten',
      },
    },
  }
---
# name: test_save_multiple_choice_question[multiple_choice]
  <class 'dict'> {
    'saveMultipleChoiceQuestion': <class 'dict'> {
      'clientMutationId': 'testid',
      'question': <class 'dict'> {
        '__typename': 'MultipleChoiceQuestion',
        'defaultAnswer': <class 'dict'> {
          'value': <class 'list'> [
            'maybe-stock-capital',
            'court-ask',
          ],
        },
        'hintText': 'test',
        'id': 'TXVsdGlwbGVDaG9pY2VRdWVzdGlvbjplbnZpcm9ubWVudGFsLXRlbg==',
        'label': 'Bonnie Moreno',
        'meta': <class 'dict'> {
        },
        'options': <class 'dict'> {
          'edges': <class 'list'> [
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': 'William Ramos',
                'slug': 'maybe-stock-capital',
              },
            },
            <class 'dict'> {
              'node': <class 'dict'> {
                'label': 'Scott Powell',
                'slug': 'court-ask',
              },
            },
          ],
        },
        'slug': 'environmental-ten',
      },
    },
  }
---
# name: test_save_question[true-True-SaveCalculatedFloatQuestion]
  <class 'dict'> {
    'saveCalculatedFloatQuestion': <class 'dict'> {
      'clientMutationId': 'testid',
      'question': <class 'dict'> {
        '__typename': 'CalculatedFloatQuestion',
        'id': 'Q2FsY3VsYXRlZEZsb2F0UXVlc3Rpb246ZW52aXJvbm1lbnRhbC10ZW4=',
        'label': 'Bonnie Moreno',
        'meta': <class 'dict'> {
        },
        'slug': 'environmental-ten',
      },
    },
  }
---
# name: test_save_question[true-True-SaveDateQuestion]
  <class 'dict'> {
    'saveDateQuestion': <class 'dict'> {
      'clientMutationId': 'testid',
      'question': <class 'dict'> {
        '__typename': 'DateQuestion',
        'id': 'RGF0ZVF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
        'label': 'Bonnie Moreno',
        'meta': <class 'dict'> {
        },
        'slug': 'environmental-ten',
      },
    },
  }
---
# name: test_save_question[true-True-SaveFileQuestion]
  <class 'dict'> {
    'saveFileQuestion': <class 'dict'> {
      'clientMutationId': 'testid',
      'question': <class 'dict'> {
        '__typename': 'FileQuestion',
        'id': 'RmlsZVF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
        'label': 'Bonnie Moreno',
        'meta': <class 'dict'> {
        },
        'slug': 'environmental-ten',
      },
    },
  }
---
# name: test_save_question[true-True-SaveFloatQuestion]
  <class 'dict'> {
    'saveFloatQuestion': <class 'dict'> {
      'clientMutationId': 'testid',
      'question': <class 'dict'> {
        '__typename': 'FloatQuestion',
        'id': 'RmxvYXRRdWVzdGlvbjplbnZpcm9ubWVudGFsLXRlbg==',
        'label': 'Bonnie Moreno',
        'meta': <class 'dict'> {
        },
        'slug': 'environmental-ten',
      },
    },
  }
---
# name: test_save_question[true-True-SaveIntegerQuestion]
  <class 'dict'> {
    'saveIntegerQuestion': <class 'dict'> {
      'clientMutationId': 'testid',
      'question': <class 'dict'> {
        '__typename': 'IntegerQuestion',
        'id': 'SW50ZWdlclF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
        'label': 'Bonnie Moreno',
        'meta': <class 'dict'> {
        },
        'slug': 'environmental-ten',
      },
    },
  }
---
# name: test_save_question[true-True-SaveTextQuestion]
  <class 'dict'> {
    'saveTextQuestion': <class 'dict'> {
      'clientMutationId': 'testid',
      'question': <class 'dict'> {
        '__typename': 'TextQuestion',
        'id': 'VGV4dFF1ZXN0aW9uOmVudmlyb25tZW50YWwtdGVu',
        'label': 'Bonnie Moreno',
        'meta': <class 'dict'> {
        },
        'slug': 'environmental-ten',
      },
    },
  }
---
# name: test_save_question[true-True-SaveTextareaQuestion]
  <class 'dict'> {
    'saveTextareaQuestion': <class 'dict'> {
      'clientMutationId': 'testid',
      'question': <class 'dict'> {
        '__typename': 'TextareaQuestion',
        'id': 'VGV4dGFyZWFRdWVzdGlvbjplbnZpcm9ubWVudGFsLXRlbg==',
        'label': 'Bonnie Moreno',
        'meta': <class 'dict'> {
        },
        'slug': 'environmental-ten',
      },
    },
  }
---
# name: test_save_static_question[static]
  <class 'dict'> {
    'saveStaticQuestion': <class 'dict'> {
      'clientMutationId': 'testid',
      'question': <class 'dict'> {
        '__typename': 'StaticQuestion',
        'id': 'U3RhdGljUXVlc3Rpb246ZW52aXJvbm1lbnRhbC10ZW4=',
        'label': 'Bonnie Moreno',
        'meta': <class 'dict'> {
        },
        'slug': 'environmental-ten',
        'staticContent': '
          Station story first. Team suggest traditional boy above. Argue move appear catch toward help wind.
          Kid avoid player relationship to range whose. Draw free property consider.
        ',
      },
    },
  }
---
# name: test_save_table_question[table]
  <class 'dict'> {
    'saveTableQuestion': <class 'dict'> {
      'clientMutationId': 'testid',
      'question': <class 'dict'> {
        '__typename': 'TableQuestion',
        'hintText': 'test',
        'id': 'VGFibGVRdWVzdGlvbjplbnZpcm9ubWVudGFsLXRlbg==',
        'label': 'Bonnie Moreno',
        'meta': <class 'dict'> {
        },
        'rowForm': <class 'dict'> {
          'slug': 'eight-traditional',
        },
        'slug': 'environmental-ten',
      },
    },
  }
---
